[package]
name = "drift-rs"
version = "1.0.0-alpha.5"
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xBreath/drift-rs"
description = """
Rust SDK for Drift V2 Protocol on the Solana blockchain.
"""
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["solana", "dex", "drift", "sdk"]

[lib]
path = "crates/src/lib.rs"

[features]
rpc_tests = []

[dependencies]
abi_stable = "0.11"
ahash = "0.8.11"
anchor-lang = { version = "0.30", features = ["derive"] }
base64 = "0.22"
bytemuck = "1.17"
dashmap = "6"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rayon = { version = "1.9.0" }
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-account-decoder = "=1.18.26"
solana-client = "=1.18.26"
solana-sdk = "=1.18.26"
solana-transaction-status = "=1.18.26"
thiserror = "1"
tokio = { version = "1.40", features = ["full"] }
type-layout = "0.2.0"
sha2 = "0.10"
heck = "0.5.0"
yellowstone-grpc-client = "1.12.0"
yellowstone-grpc-proto = { version = "1.11.0", default-features = false }
crossbeam = "0.8.4"
futures = "0.3.24"
anyhow = "1.0.75"
maplit = "1.0.2"
tokio-stream = "0.1.15"
#drift-program = { package = "drift", git = "https://github.com/drift-labs/protocol-v2.git", tag = "v2.103.0", features = [
#    "mainnet-beta"
#] }

[dev-dependencies]
bytes = "1"
hex = "0.4"
hex-literal = "0.4"

[build-dependencies]
drift-idl-gen = { version = "0.1.2", path = "crates/drift-idl-gen"}

[profile.release]
lto = true
incremental = true

[profile.dev]
lto = false
incremental = true